force-app/main/default/objects/Classification__c/Classification__c.object-meta.xml
<CustomObject>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>Classification</label>
    <nameField>
        <label>Classification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>