force-app/main/default/objects/Classification__c/fields/ClassesIncluded__c.field-meta.xml
<CustomField>
    <fullName>ClassesIncluded__c</fullName>
    <description>PacPoint-KN110519-Created for PVL Sprint 2 Phase1</description>
    <label>Classes Included</label>
    <type>TextArea</type>
</CustomField>