force-app/main/default/objects/Classification__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>PacPoint-MV091619 - Created for PVL phase 1. Use to determine the Classification Prefix on the license.</description>
    <formula>LEFT(Name,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code</label>
    <type>Text</type>
</CustomField>