force-app/main/default/objects/Classification__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>