force-app/main/default/objects/Classification__c/fields/LicenseType__c.field-meta.xml
<CustomField>
    <fullName>LicenseType__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>License Type</label>
    <referenceTo>LicenseType__c</referenceTo>
    <relationshipLabel>Classifications</relationshipLabel>
    <relationshipName>Classifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>