force-app/main/default/objects/Classification__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>PacPoint-KN082319-Created for PVL Phase 1</description>
    <label>Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>