force-app/main/default/objects/Classification__c/fields/VisibleToLicensee__c.field-meta.xml
<CustomField>
    <fullName>VisibleToLicensee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible To Licensee</label>
    <type>Checkbox</type>
</CustomField>