force-app/main/default/objects/Classification__c/fields/VisibleToPublic__c.field-meta.xml
<CustomField>
    <fullName>VisibleToPublic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible To Public</label>
    <type>Checkbox</type>
</CustomField>